--- a/ios/Podfile
+++ b/ios/Podfile
@@ -45,8 +45,8 @@ def flipper_post_install(installer)
   end
 end
 
-target 'pruebatecnica' do
-  # Pods for pruebatecnica
+target 'myapp' do
+  # Pods for myapp
   pod 'FBLazyVector', :path => "../node_modules/react-native/Libraries/FBLazyVector"
   pod 'FBReactNativeSpec', :path => "../node_modules/react-native/Libraries/FBReactNativeSpec"
   pod 'RCTRequired', :path => "../node_modules/react-native/Libraries/RCTRequired"
